# fastnn-quadrotor-control

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLICATION_SUMMARY.md  README.md  README_PUBLICATION.md  baseline_controllers.py  bc_reg.py  bc_residual.py  callbacks.py  cli.py  collect_pd_data.py  comprehensive_eval.py  controllers.py  dagger.py  debug_bc.py  eval_baseline_history.py  eval_bc.py  eval_delay_trained.py  eval_e2e.py  eval_gru_history8.py  eval_gru_model.py  eval_robustness.py  eval_stage11_primitive.py  eval_stage8.py  eval_stage8_comprehensive.py  eval_stage8_final.py  exp_reward_ablation.py  exp_transformer_scaling.py  fastnn_inference.py  fastnn_quadrotor_paper.md  finetune_stage5.py  imitation_pretrain.py  paper_audit_report.md  pyproject.toml  quadrotor.xml  quadrotor_best_path_forward.md  render_episode.py  resume_stage8.py  test_800k.py  (+51 more)
docs/development/: FRESH_START_PLAN.md
docs/experiments/: DELAY_RESULTS.md
quadrotor/: env_stage10_low_speed.py  env_stage11_primitive.py  env_stage11_trajectory.py  env_stage11_trajectory_v2.py  env_stage14_action_penalty.py  env_stage16_combo.py
results_gru_sac_stage5/: stage_5.json
results_reward_ablation/: stage_3.json  stage_4.json
results_stage5_curriculum/: stage_5.json
results_stage5_no_massest/: stage_5.json
results_stage6_racing/: stage_6.json
results_stage7_yaw/: stage_7.json  stage_8.json
results_stage7_yaw_only/: stage_7.json
results_stage8_extreme/: extended_1.0x.json  fixed_speed_1.0x.json  phase2_1.0x.json  stage_7.json
results_stage8_final/: stage_8.json
scripts/eval/: eval_bc.py  (+10 more)
(+102 files in other folders)
