[project]
name = "fastnn-quadrotor"
version = "0.1.0"
description = "FastNN Quadrotor Control with Online RL Adaptation"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.14.0",
    "pytest>=7.0.0",
    "torch",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastnn-quadrotor"
version = "0.1.0"
description = "FastNN Quadrotor Control with Online RL Adaptation"
requires-python = ">=3.10,<3.14"
dependencies = [
    "mujoco>=3.0.0",
    "gymnasium>=0.29.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "matplotlib>=3.7.0",
    "stable-baselines3>=2.0.0",
    "tensorboard>=2.14.0",
    "pytest>=7.0.0",
    "torch",
]

[tool.hatch.build.targets.wheel]
packages = [{include = "fastnn_quadrotor", from = "src"}]
